<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black1"
    >

    <TextView
        android:id="@+id/firstPage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_a"
        android:textColor="#EDF6FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="36sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintVertical_bias="0.2"
        />
    <Button
        android:id="@+id/homePatient_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/patient"
        android:backgroundTint="#000000"
        android:textColor="#EDF6FF"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/firstPage_text"
        app:layout_constraintVertical_bias=".25"
        android:textSize="19sp"
        />
    <Button
        android:id="@+id/homeDriver_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/driver"
        android:backgroundTint="#000000"
        android:textColor="#EDF6FF"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homePatient_button"
        app:layout_constraintVertical_bias=".3"
        android:textSize="19sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>