<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black1"
    tools:context=".PatientActivitySignUp">

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/signup_patient_text"
        android:textColor="#EDF6FF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_signup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_register_page"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/signup_text"
        app:layout_constraintVertical_bias=".08">

        <EditText
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_signup_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Phone Number"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/patient_signup_name"
        app:layout_constraintVertical_bias=".1">

        <EditText
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_signup_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/gender"
        android:textColor="#EDF6FF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/patient_signup_phoneNumber"
        app:layout_constraintVertical_bias=".12" />

    <RadioGroup
        android:id="@+id/patient_signup_raidoGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_signup_gender"
        app:layout_constraintVertical_bias=".05">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_radioButton"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/female_radioButton"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/non_binary_radioButton"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_signup_bloodGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/blood_group_text"
        android:textColor="#EDF6FF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/patient_signup_raidoGroup"
        app:layout_constraintVertical_bias=".12" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_signup_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Email ID"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_signup_bloodGroup"
        app:layout_constraintVertical_bias=".07">

        <EditText
            android:id="@+id/patient_signup_email_EditText"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_signup_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Password"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/patient_signup_email"
        app:layout_constraintVertical_bias=".15">

        <EditText
            android:id="@+id/patient_signup_password_EditText"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_signup_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Confirm Password"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/patient_signup_password"
        app:layout_constraintVertical_bias=".15">

        <EditText
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/patient_register_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/white"
        android:text="REGISTER"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/patient_signup_confirmPassword"
        app:layout_constraintVertical_bias=".3" />



</androidx.constraintlayout.widget.ConstraintLayout>